# hiccl

./: GETTING_STARTED.md  README.en.md  README.md  ROADMAP.md  mise.toml  pyproject.toml
examples/: combined_app.py  datalog_demo.py  datalog_web_demo.py  premium_showcase.py  time_travel_demo.py
examples/babashka/: app.py
examples/chat/: app.py
examples/csp-crypto-trader/: app.py
examples/webshell/: app.py
examples/webshell/static/: webshell.js
src/hiccl/: __init__.py  app.py  component.py  csp.py  datalog.py  hiccup.py  renderer.py  scheduler.py  session.py  signal.py  transducers.py
src/hiccl.egg-info/: PKG-INFO  SOURCES.txt
src/hiccl/live_reload/: time_travel.py
src/hiccl/static/: hiccl.js
src/hiccl/transport/: http.py  protocol.py  sse.py  stream.py  websocket.py
tests/: test_babashka.py  test_datalog.py  test_offline_mode.py  test_phase4.py  test_phase5a.py  test_scheduler.py  test_session.py  test_signal.py  test_webshell_example.py
tests/integration/: test_counter_e2e.py  test_two_clocks.py
tests/transport/: test_http.py  test_sse.py  test_stream.py  test_stream_integration.py  test_webshell.py  test_websocket.py  test_websocket_handoff.py
website/: app.py  examples.py  i18n.py  landing.py  test_smoke.py
