[project]
name = "hiccl"
version = "0.5.0"
description = "Hiccl Reactive Web Framework — Hiccup DSL + Python Pickle-like State"
readme = "README.en.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Hiccl Contributors" },
]

dependencies = [
  "fastapi>=0.110.0",
  "python-multipart>=0.0.6",
  "watchfiles>=1.2.0",
]

[project.urls]
Documentation = "https://github.com/shiunko/hiccl"
Repository = "https://github.com/shiunko/hiccl"

[project.scripts]
hiccl = "hiccl.cli:main"

[project.optional-dependencies]
full = [
  "redis>=5.0.0",
  "msgpack>=1.0.0",
  "orjson>=3.9.0",
]

[dependency-groups]
dev = [
  "build>=1.5.0",
  "httpx>=0.27",
  "hypothesis>=6.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.2.0",
  "twine>=6.2.0",
  "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
markers = [
  "asyncio: marks tests as async",
  "timeout: marks tests with timeout",
  "integration: marks tests as integration tests requiring external services",
]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
timeout_method = "thread"

consider_namespace_packages = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = false
known-first-party = ["hiccl"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hiccl = ["static/*"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
